--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <a href="#" class="nav_logo"
-        ><ion-icon name="sunny-outline"></ion-icon><span>Clima</span></a
+        ><div class="bx bx-cloud" id="nav-icon"></div><span>Clima</span></a
       >
 
       <ul class="navbar">
