card css changes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,21 @@
           </div>
         </div>
       </div>
-      <section class="weather_cards" id="weatherCards"></section>
+
+      <section class="weather_cards" id="weatherCards">
+        <div class="weather-card">
+          <div class="weather-icon">
+            <img class="weather-img" src="./assets/sunny.png" alt="condition">
+          </div>
+          <div class="weather-info">
+            <h2 class="city-name">Tehran <span class="weather-temp">35°C</span></h2>
+            <p class="weather-wind"> <i class="bx bx-wind"></i>wind speed : 11 km</p>
+            <p class="weather-time">Tuesday : 19:52</p>
+            <p class="weather-condition">Cloudy</p>
+          </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
   <script
