--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
             <img class="weather-img" src="./assets/sunny.png" alt="condition">
           </div>
           <div class="weather-info">
-            <h2 class="city-name">Tehran <span class="weather-temp">35°C</span></h2>
-            <p class="weather-wind"> <i class="bx bx-wind"></i>wind speed : 11 km</p>
-            <p class="weather-time">Tuesday : 19:52</p>
-            <p class="weather-condition">Cloudy</p>
-          </div>
+            <h2 class="city-name">Salvador<span class="weather-temp">28°C</span></h2>
+            <p class="weather-wind"> Vento: 11 km</p>
+            <p class="weather-time">Segunda : 18:57</p>
+            <p class="weather-condition">Nublado</p>
           </div>
         </div>
       </section>
