--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <body>
     <header>
       <a href="#" class="nav_logo"
-        ><div class="bx bx-cloud" id="nav-icon"></div><span>Clima</span></a
+        ><div class="bx bx-cloud" id="nav-icon"></div>
+        <span>Clima</span></a
       >
 
       <ul class="navbar">
@@ -78,19 +79,7 @@
         </div>
       </div>
 
-      <section class="weather_cards" id="weatherCards">
-        <div class="weather-card">
-          <div class="weather-icon">
-            <img class="weather-img" src="./assets/sunny.png" alt="condition">
-          </div>
-          <div class="weather-info">
-            <h2 class="city-name">Salvador<span class="weather-temp">28°C</span></h2>
-            <p class="weather-wind"> Vento: 11 km</p>
-            <p class="weather-time">Segunda : 18:57</p>
-            <p class="weather-condition">Nublado</p>
-          </div>
-        </div>
-      </section>
+      <section class="weather_cards" id="weatherCards"></section>
     </main>
   </body>
   <script
