--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
 
       <ul class="navbar">
         <li>
-          <a href="#"><span>Home</span></a>
+          <a href="https://github.com/euvitorcarvalho" target="_blank"
+            ><span>Home</span></a
+          >
         </li>
-        <li><a href="#">Download</a></li>
-        <li><a href="#">Contact</a></li>
+        <li>
+          <a href="https://github.com/euvitorcarvalho" target="_blank"
+            >Download</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/euvitorcarvalho" target="_blank"
+            >Contact</a
+          >
+        </li>
         <div class="btn_container">
           <button class="nav_btn2">Sign In</button>
         </div>
