--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
       <section class="weather_cards" id="weatherCards"></section>
     </main>
+    <footer>
+      <p>Feito com ❤️ por Vitor Carvalho</p>
+    </footer>
   </body>
   <script
     type="module"
