--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
       <section class="weather_cards" id="weatherCards"></section>
     </main>
     <footer>
-      <p>Feito com ❤️ por Vitor Carvalho</p>
+      <p>
+        Feito com ❤️ por
+        <a href="https://github.com/euvitorcarvalho">Vitor Carvalho</a>
+      </p>
     </footer>
   </body>
   <script
