--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </main>
     <footer>
       <p>
-        Feito com ❤️ por
+        made with ❤️ by
         <a href="https://github.com/euvitorcarvalho">Vitor Carvalho</a>
       </p>
     </footer>
